Fixed alignament of header and listing

--- a/src/app/uiComponents/shared/css/ActionSection.module.css
+++ b/src/app/uiComponents/shared/css/ActionSection.module.css
@@ -1,6 +1,5 @@
 .root {
     background-color: white;
-    padding: 1rem;
 
     border-bottom: 1px solid var(--mantine-color-indigo-1);
 }
@@ -14,7 +13,7 @@
     align-items: center;
     align-content: center;
 
-    padding: 1rem 0 1rem 0;
+    padding: 1rem;
 }
 
 .heading {
